modifications for smart launch and iterate

--- a/WebGUI/html/Iterate.html
+++ b/WebGUI/html/Iterate.html
@@ -3,14 +3,14 @@
 <head>
 	<title>ConfigurationGUI</title>
 
-	<link href='..//css/fonts.css?family=Inconsolata:400' rel='stylesheet' type='text/css'>
+	<link href='/WebPath/css/fonts.css?family=Inconsolata:400' rel='stylesheet' type='text/css'>
 		
-	<link rel="stylesheet" type="text/css" href="..//css/ConfigurationGUI.css">
-	<link rel="stylesheet" type="text/css" href="..//css/ConfigurationAPI.css">
+	<link rel="stylesheet" type="text/css" href="/WebPath/css/ConfigurationGUI.css">
+	<link rel="stylesheet" type="text/css" href="/WebPath/css/ConfigurationAPI.css">
 
 	<!-- MultiSelectBox: Must include .css style sheet and .js functionality -->
-	<link rel="stylesheet" type="text/css" href="..//css/MultiSelectBox.css">
-	<script type="text/JavaScript" src="..//js/js_lib/MultiSelectBox.js"></script>
+	<link rel="stylesheet" type="text/css" href="/WebPath/css/MultiSelectBox.css">
+	<script type="text/JavaScript" src="/WebPath/js/js_lib/MultiSelectBox.js"></script>
 
 	<style type="text/css">			
 		
