iterator progress on modify active group

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -1579,7 +1579,7 @@
 					str += "<br><br>It seems like there was trouble with a specific table, " +
 							 "&quot;" + errSplit[1] + "&quot;. Try using the Table Editor " +
 							 "in ots wiz to verify the column info is valid; or you can try " +
-							 "goint to to the table view:";
+							 "going to to the table view:";
 					str += "<br>&nbsp;&nbsp;&nbsp;&nbsp;";
 					str += "<a href='#' onclick='setupSpecificConfig(\"" + errSplit[1] +
 						"\"); return false;'>";
