StartOTS now always checks for database migration

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -6155,7 +6155,7 @@
 								var memberVal;
 								for(var i=0;i<groupMembers.length;++i)
 								{	
-									memberVal = DesktopContent.getXMLValue(groupMembers[i])
+									memberVal = DesktopContent.getXMLValue(groupMembers[i]);
 									for(var j=0;j<msValues.length;++j)
 										if(msValues[j] == memberVal)
 										{			
