checking in update to ethernet burst sequence id, and raw data consumer for NIM+ streaming app

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -8980,10 +8980,10 @@
 										".'");
 							}
 
-							Debug.log("Successfully added a new record to temporary version '" +
-									treeMemberVersions_[resultingTableIndex] + "' of table '" + 
-									treeEditingTargetTable_ + ".'",
-									Debug.INFO_PRIORITY);						
+							//							Debug.log("Successfully added a new record to temporary version '" +
+							//									treeMemberVersions_[resultingTableIndex] + "' of table '" + 
+							//									treeEditingTargetTable_ + ".'",
+							//									Debug.INFO_PRIORITY);						
 						}		
 						else if(treeEditingNodeType_ == "table-newGroupRow")
 						{
