--- a/WebGUI/html/Iterate.html
+++ b/WebGUI/html/Iterate.html
@@ -3839,8 +3839,8 @@
 				else
 				{
 					_old_active_plan_status = ""; //clear for new action
-					Debug.log("Successfully started the iteration plan '" + _targetPlan + ".'",
-							Debug.INFO_PRIORITY);
+					//Debug.log("Successfully started the iteration plan '" + _targetPlan + ".'",
+					//		Debug.INFO_PRIORITY);
 					_need_plan_complete = true;
 				}
 				
