movable tooltip-error-info box

--- a/WebGUI/html/Iterate.html
+++ b/WebGUI/html/Iterate.html
@@ -4092,7 +4092,7 @@
 				try
 				{	
 					var val;
-					Debug.log("depth_iterations.length " + depth_iterations.length);
+					//Debug.log("depth_iterations.length " + depth_iterations.length);
 					for(var i=0;i<depth_iterations.length;++i)
 					{
 						val = DesktopContent.getXMLValue(depth_iterations[i]) | 0;
