Added State Changer to gateway supervisor for external UDP commands

--- a/WebGUI/html/Iterate.html
+++ b/WebGUI/html/Iterate.html
@@ -45,6 +45,43 @@
 			border-radius: 3px;	
 		}
 		
+		/*
+		<div class="arrow-right"></div>
+		.arrow-right {
+		  width: 0; 
+		  height: 0; 
+		  border-top: 60px solid transparent;
+		  border-bottom: 60px solid transparent;
+		  
+		  border-left: 60px solid green;
+		}
+
+		<div class="container">
+		    <div class="triangle"></div>
+		</div>
+		.container {
+		    width: 200px;
+		    height: 200px;
+		    position: relative;
+		    border-top: 4px solid #e74c3c;
+		}
+
+		.triangle {
+		    position: absolute;
+		    margin: auto;
+		    top: -70px;
+		    left: 0;
+		    right: 0;
+		    width: 137px;
+		    height: 137px;
+		    transform: rotate(45deg);
+		    -webkit-transform: rotate(45deg);
+		    -moz-transform: rotate(45deg);
+		    -o-transform: rotate(45deg);
+		    -ms-transform: rotate(45deg);
+		    border-right: 4px solid #e74c3c;
+		    border-bottom: 4px solid #e74c3c;
+		}*/
 
 		/* =============== start plan selector ================ */
 		.recordAdd,
