checkpoint adding record creation wizard

--- a/WebGUI/html/Iterate.html
+++ b/WebGUI/html/Iterate.html
@@ -2324,7 +2324,7 @@
 
 				//steps:
 				//	create new record
-				//	edit record (status=On, groupLinkId=uid + "plan)
+				//	edit record (status=On, groupLinkId=uid + "plan")
 				//	save
 				//	refresh
 
