Added security tooltips, Dashboard refresh, and new 'Show Desktop/Restore All Windows' functionality

--- a/WebGUI/html/OtsConfigurationWizard.html
+++ b/WebGUI/html/OtsConfigurationWizard.html
@@ -54,8 +54,8 @@
                                                 "<a href='#' onclick='DesktopContent.setSecurityOn(true)'>here</a>" +
 			                        " to have a new, more complex sequence generated at each runetime or you can set up this feature later by " +
 			                        "visiting the 'Edit Security' app in the future."; 
-			             Debug.log(msg, Debug.WARN_PRIORITY);
-                   	             //DesktopContent.tooltip("Security Alert",msg);
+			             //Debug.log(msg, Debug.INFO_PRIORITY);
+                   	             DesktopContent.tooltip("Security Alert",msg);
 			        }
 								
 				DesktopContent.tooltip("Wiz-mode Introduction",
