test beam checkpoint

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -701,6 +701,7 @@
 					"\n\n Please wait 10 seconds and then reload the System View to verify changes.",
 					Debug.INFO_PRIORITY);
 			
+			var countDown = 10;
 			localCountDown();
 			//=================
 			function localCountDown()
