--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -586,7 +586,7 @@
 	        <div class="center">
 		        <p>Address:  <input type="text" id="addressInput" class="inputBox"/></p>
 		        <div id="output1" class="formatSelection">Address format:
-		           <select id="addressFormat" class="dropdown" onchange="toggleLSBF()">
+		           <select id="addressFormat" class="dropdown">
 				    <option class="select" value="hex" selected="selected">hex</option>
 				    <option class="select" value="dec">dec</option>
 				    <option class="select" value="ascii">ascii</option>
