Test beam checkpoint working to add diagnostics to nim plus

--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -580,7 +580,7 @@
 			
 			el = document.createElement("div");
 			str = "";
-			str += "<a href='#' onclick='initSubsetGlobalData()'>Refresh</a>";
+			//str += "<a href='#' onclick='initSubsetGlobalData()'>Refresh</a>";
 			el.innerHTML = str;
 			_topPane.appendChild(el);			
 
